--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -584,6 +584,12 @@
            value="Throw Smoke Grenade"/>
     <entry name="Tau/EMPGrenadeDescription"
            value="Increases the ranged damage reduction of the tile."/>
+    <entry name="Tau/GravityWaveProjector1"
+           value="Gravity Wave Projector"/>
+    <entry name="Tau/GravityWaveProjector1Description"
+           value="Prevents unit movement on target tile."/>
+    <entry name="Tau/GravityWaveProjector1Flavor"
+           value="This projector emits a high-powered graviton wave that repulses nearby enemies, slowing their advance to a crawl."/>
     <entry name="Tau/KauyonDescription"
            value="Metastrategy that increases the ranged damage reduction of allied T'au battlesuit units in the area. Shares cooldown with other metastrategies."/>
     <entry name="Tau/MarkerlightDescription"
