--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -1011,6 +1011,10 @@
            value="Seeker missiles are designed to lock onto the remote targeting beacon provided by a markerlight beam and ride the signal all the way to their target, even bypassing and evading intervening terrain in the process.>"/>
     <entry name="Tau/GhostkeelElectrowarfareSuite"
            value="Electrowarfare Suite"/>
+    <entry name="Tau/NovaFireDescription"
+           value="Increases the attacks of heavy burst cannon."/>
+    <entry name="Tau/NovaShieldDescription"
+           value="Increases the damage reduction and the attacks of fusion blasters in half range."/>
     <entry name="Tau/PointDefenceTargetingRelay"
            value="Special Peripheral Assault Module"/>
     <entry name="Tau/Prosperity"
