--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -417,7 +417,9 @@
            value="This attack looses a brilliant flare of light, searing the sight of the victim and forcing him to fight blind for a few moments."/>
 
     <entry name="HeadquartersDescription"
-           value="Destroying the headquarters unit destroys the entire city. Increases the ranged damage reduction against attacks from range 2 or higher. Increases the ranged damage reduction by 5% for each adjacent allied unit."/>
+           value="Destroying the headquarters unit destroys the entire city. Increases the invulnerable damage reduction by 5% for each adjacent allied unit. Decreases weaponry max range."/>
+    <entry name="CityDescription"
+           value="Increases the damage reduction against attacks from range 2 or higher and the healing rate for allied units. Decreases the movement cost of units. Increases the ranged damage reduction of infantry units."/>
 
     <entry name="IronWill"
            value="Cadia Stands!"/>
