--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -208,7 +208,7 @@
     <entry name="BlurryDescription"
            value="Decreases opponent's ranged accuracy."/>
     <entry name="BulkyVulky"
-           value="Bulky Vulky"/>
+           value="Bulky Vinkl"/>
     <entry name="BulkyVulkyDescription"
            value="Requires six additional cargo slots in a transport (basically cannot embark any transport)."/>
     <entry name="BulkyVulkyFlavor"
