--- a/Mod/Data/Core/Languages/Russian/Barks.xml
+++ b/Mod/Data/Core/Languages/Russian/Barks.xml
@@ -1,35 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<language>
-    <entry name="AdeptusMechanicus/IronstriderBallistarius:Idle#3"
-           value="Zhuko was here…"/>
-
-    <entry name="Orks/FlashGitz:Idle#0"
-           value="It's the Boss! Wot do yer want, Boss?"/>
-    <entry name="Orks/FlashGitz:Idle#1"
-           value="More barrels means more dakka. More dakka means more fun!"/>
-    <entry name="Orks/FlashGitz:Idle#2"
-           value="Nah, mate, this is my squig. Get yer own!"/>
-    <entry name="Orks/FlashGitz:Idle#3"
-           value="Oi boss, wot's going on?"/>
-    <entry name="Orks/FlashGitz:Idle#4"
-           value="One green squig, sitting on da wall. Two…"/>
-    <entry name="Orks/FlashGitz:Idle#5"
-           value="This choppa just isn't big enuff!"/>
-    <entry name="Orks/FlashGitz:Idle#6"
-           value="Where's der fite at?"/>
-    <entry name="Orks/FlashGitz:Idle#7"
-           value="Who do yer want me to 'it?"/>
-    <entry name="Orks/FlashGitz:Idle#8"
-           value="Zhuko was here…"/>
-    <entry name="Orks/FlashGitz:IdleCount"
-           value="9"/>
-
-    <entry name="Tau/GhostkeelBattlesuit:Idle#0"
-           value="Always ready."/>
-    <entry name="Tau/GhostkeelBattlesuit:Idle#1"
-           value="We'll get it done."/>
-    <entry name="Tau/GhostkeelBattlesuit:Idle#2"
-           value="Zhuko was here…"/>
-    <entry name="Tau/GhostkeelBattlesuit:IdleCount"
-           value="3"/>
-</language>
+<language><entry name="AdeptusMechanicus/IronstriderBallistarius:Idle#3" value="Жуко был здесь…»" /><entry name="Orks/FlashGitz:Idle#0" value="Это Босс! Чего вы хотите, босс?»" /><entry name="Orks/FlashGitz:Idle#1" value="Больше бочек означает больше дакка. Больше дакка означает больше удовольствия!»" /><entry name="Orks/FlashGitz:Idle#2" value="Нет, приятель, это мой сквиг. Получите свое!&quot;" /><entry name="Orks/FlashGitz:Idle#3" value="Эй, босс, что происходит?»" /><entry name="Orks/FlashGitz:Idle#4" value="Один зеленый сквиг сидит на стене. Два…&quot;" /><entry name="Orks/FlashGitz:Idle#5" value="Эта чоппа просто не такая уж большая!»" /><entry name="Orks/FlashGitz:Idle#6" value="Где находится der fit?&quot;" /><entry name="Orks/FlashGitz:Idle#7" value="Кого ты хочешь, чтобы я это сделал?»" /><entry name="Orks/FlashGitz:Idle#8" value="Жуко был здесь…»" /><entry name="Orks/FlashGitz:IdleCount" value="9 дюймов" /><entry name="Tau/GhostkeelBattlesuit:Idle#0" value="Всегда готов.&quot;" /><entry name="Tau/GhostkeelBattlesuit:Idle#1" value="Мы это сделаем»." /><entry name="Tau/GhostkeelBattlesuit:Idle#2" value="Жуко был здесь…»" /><entry name="Tau/GhostkeelBattlesuit:IdleCount" value="3&quot;" /></language>
