--- a/Mod/Data/Core/Languages/Russian/Features.xml
+++ b/Mod/Data/Core/Languages/Russian/Features.xml
@@ -1,23 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<language>
-    <entry name="NullZone"
-           value="<string name='Traits/NullZone'/>"/>
-    <entry name="NullZoneDescription"
-           value="<string name='Traits/NullZoneDescription'/>"/>
-    <entry name="NullZoneFlavor"
-           value="<string name='Traits/NullZoneFlavor'/>"/>
-    <entry name="SacredGround"
-           value="Sacred Ground"/>
-    <entry name="SacredGroundDescription"
-           value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
-    <entry name="SacredGroundFlavor"
-           value="Reclaim the Emperor’s dominion and consecrate it once more."/>
-    <entry name="ShatteredDefences"
-           value="<string name='Traits/ShatteredDefences'/>"/>
-    <entry name="ShatteredDefencesDescription"
-           value="<string name='Traits/ShatteredDefencesDescription'/>"/>
-    <entry name="CursedGround"
-           value="Cursed Ground"/>
-    <entry name="CursedGroundDescription"
-           value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
-</language>
+<language><entry name="NullZone" value="&lt;string name='Traits/NullZone'/&gt;&quot;" /><entry name="NullZoneDescription" value="&lt;string name='Traits/NullZoneDescription'/&gt;&quot;" /><entry name="NullZoneFlavor" value="&lt;string name='Traits/NullZoneFlavor'/&gt;&quot;" /><entry name="SacredGround" value="Священная земля»" /><entry name="SacredGroundDescription" value="Функция, завершающая движение юнита и накладывающая на врага дебафф постепенного урона»." /><entry name="SacredGroundFlavor" value="Верните себе власть Императора и освятите ее еще раз»." /><entry name="ShatteredDefences" value="&lt;string name='Traits/ShatteredDefences'/&gt;&quot;" /><entry name="ShatteredDefencesDescription" value="&lt;string name='Traits/ShatteredDefencesDescription'/&gt;&quot;" /><entry name="CursedGround" value="Проклятая земля»" /><entry name="CursedGroundDescription" value="Функция, завершающая движение юнита и накладывающая на врага дебафф постепенного урона»." /></language>
