--- a/Mod/Data/Core/Languages/Russian/GUI.xml
+++ b/Mod/Data/Core/Languages/Russian/GUI.xml
@@ -1,5 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<language>
-    <entry name="DynasticCodes"
-           value="Dynastic Codes"/>
-</language>
+<language><entry name="DynasticCodes" value="Династические кодексы»" /></language>
